--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "proxy-middleware",
-  "version": "0.15.0",
-  "description": "http(s) proxy as connect middleware",
+  "name": "node-proxy-middleware",
+  "version": "0.15.1",
+  "description": "http(s) proxy as connect middleware (Fork by proxy-middleware)",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/andrewrk/connect-proxy"
+    "url": "https://github.com/leninlin/node-proxy-middleware"
   },
   "keywords": [
     "connect",
@@ -18,7 +18,7 @@
     "http",
     "ssl"
   ],
-  "author": "Andrew Kelley",
+  "author": "Vladimir Akritskiy",
   "license": "MIT",
   "engines": {
     "node": ">=0.8.0"
